--- a/check_box.html
+++ b/check_box.html
@@ -323,7 +323,7 @@
             }
             else if (num_checkbox >= 7){
                 package = 
-                   `<div class='flexbox'<img class='img-end' src = "https://lh3.googleusercontent.com/d/1SRKL7p-b_AxEtGsCTry8ziZ8OAGminUk"/>`
+                   `<div class='flexbox'><img class='img-end' src = "https://lh3.googleusercontent.com/d/1SRKL7p-b_AxEtGsCTry8ziZ8OAGminUk"/>`
                   +`<div><p class='size20'>Có thể bạn mong muốn phát triển bản thân, sống một cuộc đời đáng mơ ước, nhưng không biết phải làm gì</p>`
                   +`<p class='size20'>Kết quả bạn đang mong muốn mơ hồ, và phức tạp</p>`
                   +`<p class='size20'>Có thể bạn cần hiểu thêm những điều bạn đang “không biết là mình không biết” và sự hỗ trợ dài hạn từ coach để tạo ra một kết quả đột phá</p>`
